--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.DrinkWise" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.DrinkWise" parent="android:Theme.Material.NoActionBar"/>
+    <style name="Theme.DrinkWise.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.DrinkWise</item>
+    </style>
 </resources>
